--- a/src/App.css
+++ b/src/App.css
@@ -1,51 +1,19 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
 /* Navbar.css */
-/* NavBar.css */
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Montserrat', sans-serif;
+}
 
 .navbar {
-  background-color: #f5f5f5;
-  padding: 10px;
+  background-color: #F08080;
+  padding: 5px;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  perspective: 1000px;
 }
 
 .logo-container {
@@ -54,34 +22,80 @@
 }
 
 .logo {
-  width: 70px;
-  height: 70px;
+  width: 100px;
+  height: 100px;
   margin-right: 10px;
+  transition: transform 0.3s ease-in-out;
+}
+
+.logo:hover {
+  transform: rotateY(180deg);
 }
 
 .logo-text {
-  font-size: 20px;
+  font-size: 30px;
   font-weight: bold;
   color: #333;
   margin: 0;
+  transition: color 0.3s ease-in-out;
 }
 
 .navbar-links {
   list-style: none;
   display: flex;
   align-items: center;
+  text-align: center;
+  font-weight: 700;
 }
 
 .navbar-links li {
   margin-right: 10px;
+  position: relative;
+  perspective: 1000px;
 }
 
 .navbar-links a {
-  font-size: 16px;
+  font-size: 20px;
   color: #333;
   text-decoration: none;
+  position: relative;
+  transition: color 0.3s ease-in-out;
+}
+
+.navbar-links a:before {
+  content: '';
+  position: absolute;
+  bottom: -2px;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background-color: #333;
+  transform: scaleX(0);
+  transition: transform 0.3s ease-in-out;
 }
 
 .navbar-links a:hover {
-  color: #666;
+  font-weight: 700;
+  color: #fff;
+}
+
+.navbar-links a:hover:before {
+  transform: scaleX(1);
+}
+
+.navbar-links li:before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #8093f0;
+  transform: rotateX(60deg);
+  transform-origin: bottom;
+  transition: transform 0.3s ease-in-out;
+}
+
+.navbar-links li:hover:before {
+  transform: rotateX(0deg);
 }
